# hold-config

./: LICENSE  default.json  package.json  pnpm-lock.yaml  sync-version.cjs  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CategoryTemplateDialog.tsx  CategoryTemplateManager.tsx  ConfigGroupCard.tsx  ConfigGroupDialog.tsx  EnvFileTabs.tsx  MergePreview.tsx  ProjectSidebar.tsx  QuickSwitchPanel.tsx  ThemeToggle.tsx  WorkArea.tsx  about-dialog.tsx  app-sidebar.tsx  category-template-dialog.tsx  category-template-manager.tsx  config-group-card.tsx  config-group-dialog.tsx  config-json-editor.tsx  env-file-tabs.tsx  global-json-editor.tsx  merge-preview.tsx  particles.tsx  project-sidebar.tsx  quick-switch-panel.tsx  site-header.tsx  work-area.tsx
src/components/ui/: button.tsx  dialog.tsx  empty.tsx  sidebar.tsx  sonner.tsx  spinner.tsx  textarea.tsx  toggle-group.tsx  typography.tsx
src/config/: constants.ts
src/contexts/: ThemeContext.tsx
src/hooks/: use-app.tsx  use-config-manager.ts  use-project-manager.ts  use-theme.ts  useApp.tsx  useAppStyle.ts  useConfigManager.ts  useNotification.tsx  useProjectManager.ts
src/layout/: dashborad.tsx
src/lib/: toast.ts  utils.ts
